<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_emergency"
        android:icon="@drawable/ic_emergency"
        android:title="@string/nav_emergency" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/nav_notes" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
